fix: updated logo size on mobile

--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ h2 {
 	}
 
 	.nav__logo {
-		width: 24px;
+		/* width: 24px; */
 	}
 
 	.project {
